# x-project

./: .gitignore  CMakeLists.txt  README.md  msg.cpp  net_comm.cpp
arch/: Makefile.am  intel.c  intel.h
crc32c/: crc32c_intel_baseline.c  crc32c_intel_baseline.h  crc32c_intel_fast.c
extra/glog/: config.status  configure  libtool
extra/glog/.deps/: libglog_la-demangle.Plo  libglog_la-utilities.Plo  libglog_la-vlog_is_on.Plo  logging_striptest0-logging_striptest_main.Po  logging_unittest-logging_unittest.Po  signalhandler_unittest-signalhandler_unittest.Po  stacktrace_unittest-stacktrace_unittest.Po  symbolize_unittest-symbolize_unittest.Po  utilities_unittest-utilities_unittest.Po
extra/glog/src/: logging.cc  utilities.cc  utilities.h
extra/glog/src/glog/: logging.h.in
include/glog/: config.h
larbin-2.6.3/: larbin  larbin.conf
larbin-2.6.3/adns/: config.status  internal.h
larbin-2.6.3/glog/: configure.ac  libglog.pc
larbin-2.6.3/glog/.deps/: demangle_unittest-demangle_unittest.Po  libglog_la-logging.Plo  libglog_la-raw_logging.Plo  libglog_la-signalhandler.Plo  libglog_la-symbolize.Plo  logging_striptest10-logging_striptest10.Po  logging_striptest2-logging_striptest2.Po  stl_logging_unittest-stl_logging_unittest.Po
larbin-2.6.3/glog/autom4te.cache/: output.0  requests  traces.0
larbin-2.6.3/glog/src/: .logging.cc.swo
larbin-2.6.3/glog/src/glog/: logging.h
larbin-2.6.3/src/: global.cc
larbin-2.6.3/src/fetch/: savespecbuf.cc
larbin-2.6.3/src/utils/: debug.h  webserver.cc
protos/: image_guide.proto
src/: CMakeLists.txt
src/common/arch/: intel.c
src/common/crc32c/: crc32c_intel_fast.c  crc32c_intel_fast.h
src/helper/: CMakeLists.txt  base64.cc  common.h  xmlparser.h
src/image_guide/: CMakeLists.txt  image_guide.grpc.pb.cc  image_guide.grpc.pb.h  image_guide.pb.cc  image_guide.pb.h  image_guide_client.cc  image_guide_server.cc
src/lib/: libglog.la  libglog.so.0.0.0
src/mnist/: CMakeLists.txt  do_mnist  do_mnist.cc  do_mnist.py  read_mnist.cc
src/net/: msg.cpp
src/test/: CMakeLists.txt  unittest.cc
test/: CMakeLists.txt  test_glog_main  test_glog_main.cc
