SET(DO_MNIST_SRC do_mnist.cc)
SET(READ_MNIST_SRC read_mnist.cc)
SET(OPCV opencv_core opencv_highgui opencv_features2d opencv_flann opencv_imgproc)
INCLUDE_DIRECTORIES(/usr/local/include ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/src)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib /usr/local/lib)
ADD_EXECUTABlE(read_mnist ${DO_MNIST_SRC})
ADD_EXECUTABlE(do_mnist ${READ_MNIST_SRC})
TARGET_LINK_LIBRARIES(read_mnist ${OPCV})
TARGET_LINK_LIBRARIES(do_mnist ${OPCV})
